# ChesssirEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bench.sh  compile_commands.json  engine  engine.cpp  engine_log.txt  main.cpp  precompute.h  precomputeBitBoards.cpp  uci_log.txt  utils.cpp
.cache/clangd/index/: Types.h.C6DDC750BA221282.idx  board.cpp.E000648A1D77BDDF.idx  board.h.411E22CC8F472493.idx  debug.cpp.C5908A435020C861.idx  debug.h.A6A672AA248FC6A6.idx  main.cpp.53D5DF2764ABF2FA.idx  perft.cpp.3753AA722EB1B59F.idx  perft.h.28C198A2171B474E.idx  precompute.h.8F4D2FE24EA115BB.idx  precomputeBitBoards.cpp.26252B575FD33492.idx  utils.cpp.36EAB3BBED392317.idx
.githooks/: pre-commit
.github/workflows/: build.yml  format.yml
src/core/: attackHandler.cpp  attackHandler.h  board.cpp  board.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  main.cpp  moveGenerator.cpp  moveGenerator.h  moveHandler.cpp  tranpositionTable.h  transpositionTable.cpp  transpositionTable.h
src/data/: precompute.h  precomputeBitBoards.cpp  zobrist.cpp  zobrist.h
src/utils/: Types.h  bitops.h  fenHelper.cpp  fenHelper.h  log.cpp  log.h  uci.cpp  uci.h  utils.cpp
tools/: debug.cpp  debug.h  perft.cpp  perft.h
tools/tests/: TTTest.cpp  drawTest.cpp  evalTest.cpp  moveOrderTest.cpp  perft.cpp  perft.h  perftTest.cpp  searchTest.cpp  zobristTest.cpp
